# Metochina

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  INSTALAR_WINDOWS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
metochina/: __init__.py  __main__.py  cli.py
metochina/analysis/: __init__.py  analyzer.py
metochina/core/: extractor.py  gps.py  hasher.py
metochina/models/: __init__.py  metadata.py
metochina/output/: console.py  exporters.py
metochina/ui/: __init__.py  banner.py  display.py  effects.py  menu.py
metochina/utils/: __init__.py
tests/: test_analyzer.py  test_banner.py  test_exporters.py  test_extractor.py  test_gps.py  test_hasher.py  test_menu.py  test_models.py
